# rust-starter-bin

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
scripts/: get_current_version.sh  is_version_already_uploaded.sh
src/: cli.rs  main.rs
tests/bench/: bench_basic.sh  run_bench.sh
tests/e2e/: test_smoke.sh
